--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-Marmara-University-Workspace\Object Oriented Software Design
+Marmara-University-Workspace/Object Oriented Software Design/CSE3063F22P1_GRP8
