[main] added gitlens feature

--- a/CSE 2025 (Data Structures)/fall-semester/.vscode/settings.json
+++ b/CSE 2025 (Data Structures)/fall-semester/.vscode/settings.json
@@ -2,5 +2,6 @@
     "C_Cpp.errorSquiggles": "enabled",
     "files.associations": {
         "string.h": "c"
-    }
+    },
+    "gitlens.outputLevel": "debug"
 }
